--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -37,7 +37,7 @@
   background-color: black;
   width: 100%;
   height: calc(100vh + 150px);
-  transition: opacity 1s ease-in;
+  transition: opacity 1s ease;
   z-index: 2;
   position: initial;
   align-items: center;
