--- a/src/components/styles/WatchRoads.css
+++ b/src/components/styles/WatchRoads.css
@@ -24,7 +24,7 @@
   justify-content: space-around;
   border: 3px solid black;
   align-items: center;
-  width: 37%;
+  width: 400px;
   height: 173px;
   margin-top: 60px;
   border-radius: 10px;
@@ -41,12 +41,20 @@
 }
 
 #road-edit {
+  display: flex;
+  width: 400px;
+  height: 173px;
+  justify-content: flex-end;
+  align-items: flex-end;
   position: absolute;
-  margin-top: 125px;
-  margin-left: 25%;
+  /* margin-top: 67px;
+  margin-left: 12%; */
 }
 
 #road-edit-img {
   width: 20px;
   height: 20px;
+  margin-bottom: 15px;
+  margin-right: 15px;
+  padding: 0;
 }
