--- a/src/components/styles/WatchRoads.css
+++ b/src/components/styles/WatchRoads.css
@@ -1,7 +1,7 @@
 #road-entire {
   display: flex;
   width: 100%;
-  height: auto;
+  height: 100vh;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
