--- a/src/components/styles/WatchRoads.css
+++ b/src/components/styles/WatchRoads.css
@@ -1,7 +1,7 @@
 #road-entire {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 150vh;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -38,6 +38,7 @@
   vertical-align: middle;
   text-align: center;
   color: black;
+  z-index: 2;
 }
 
 #road-edit {
