--- a/src/components/styles/GlobalNavigation.css
+++ b/src/components/styles/GlobalNavigation.css
@@ -1,3 +1,12 @@
+@keyframes width-animation {
+  from {
+    width: 0;
+  }
+  to {
+    width: 20%;
+  }
+}
+
 #nav {
   background-color: #efefef;
 }
@@ -44,3 +53,43 @@
   flex-grow: 0.5;
   padding-top: 20px;
 }
+
+#header-nav {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: fixed;
+}
+
+#nav-menu {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  color: #000000;
+  margin-right: 10%;
+}
+
+#menu-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background: #29753d;
+  justify-content: flex-start;
+  /* animation-name: width-animation; */
+  width: 0%;
+  /* animation-duration: 1s; */
+  /* animation-direction: alternate; */
+  transition: 1s;
+}
+
+#menu-h3 {
+  color: white;
+  font-weight: 300;
+  line-height: 54px;
+}
+/* 
+#menu-container:hover {
+  width: 20%;
+} */
