--- a/src/components/styles/GlobalNavigation.css
+++ b/src/components/styles/GlobalNavigation.css
@@ -1,12 +1,3 @@
-@keyframes width-animation {
-  from {
-    width: 0;
-  }
-  to {
-    width: 20%;
-  }
-}
-
 #nav {
   background-color: #efefef;
 }
@@ -61,6 +52,7 @@
   flex-direction: row;
   justify-content: flex-end;
   position: fixed;
+  z-index: 6;
 }
 
 #nav-menu {
@@ -69,6 +61,7 @@
   line-height: 16px;
   color: #000000;
   margin-right: 10%;
+  cursor: pointer;
 }
 
 #menu-container {
@@ -77,19 +70,91 @@
   height: 100%;
   background: #29753d;
   justify-content: flex-start;
-  /* animation-name: width-animation; */
   width: 0%;
-  /* animation-duration: 1s; */
-  /* animation-direction: alternate; */
-  transition: 1s;
+  transition: 0.7s ease-out;
+  /* border-style: ; */
+  border-left: 0.5px groove white;
 }
 
-#menu-h3 {
+#menu-a {
   color: white;
   font-weight: 300;
-  line-height: 54px;
+  line-height: 64px;
+  padding-left: 7%;
+  font-size: 20px;
+  text-decoration: none;
+  margin-bottom: 16%;
 }
-/* 
-#menu-container:hover {
-  width: 20%;
-} */
+
+#menu-insta {
+  margin-top: 40%;
+}
+
+#menu-insta,
+#menu-facebook {
+  color: white;
+  font-weight: 300;
+  padding-left: 7%;
+  text-decoration: none;
+  line-height: 40px;
+}
+
+.menu-items {
+  transition: color 0.5s ease-out;
+  word-wrap: none;
+}
+#close-container {
+  cursor: pointer;
+  text-align: end;
+  padding-right: 7%;
+  margin-bottom: 15%;
+  font-weight: bolder;
+  color: white;
+}
+
+#menu-insta:hover,
+#menu-facebook:hover,
+#menu-a:hover {
+  color: rgba(255, 193, 7, 1);
+}
+
+#after-home {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+}
+
+.arrow {
+  border: solid black;
+  border-width: 0 7px 7px 0;
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+  margin-top: 20px;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+#block-img {
+  display: flex;
+  opacity: 0;
+  width: 100%;
+  height: 45vh;
+  position: absolute;
+  background-color: yellow;
+  transition: 0.9s ease;
+  z-index: -3;
+}
