--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -93,3 +93,136 @@ h4 {
   font-size: 13.5px;
   color: black;
 }
+
+#third-page {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  z-index: 5;
+  transition: 0.6s ease-in;
+}
+
+#down-our-intro {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 73px;
+  text-align: center;
+  width: 100%;
+}
+
+#btns {
+  width: 65%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#brand-book,
+#see-now {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 80px;
+  background: #c4c4c4;
+  border: 0.5px solid #000000;
+  box-sizing: border-box;
+  border-radius: 16px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  color: #000000;
+  transition: 0.5s ease-in;
+}
+
+#brand-book:hover,
+#see-now:hover {
+  background: rgba(41, 117, 61, 1);
+  color: white;
+  cursor: pointer;
+}
+
+/* #btn-text {
+  width: 284px;
+  height: 55px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
+#footer-white {
+  height: 45vh;
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#footer-left {
+  display: flex;
+  height: 75%;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+#footer-left-pre {
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 800;
+  margin: 0;
+  line-height: 54px;
+  margin-block-end: 0.45em;
+}
+
+#address-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 0.6em;
+}
+
+#address-infos {
+  width: 180px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+#address-things {
+  display: flex;
+  width: 36px;
+  height: 80px;
+  margin-right: 65px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+#btn-text,
+#address-thing,
+#address-info {
+  margin: 0;
+}
+
+#copy-rights {
+  display: flex;
+  height: 80%;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12px;
+  line-height: 20px;
+}
