--- a/src/components/styles/GlobalNavigation.css
+++ b/src/components/styles/GlobalNavigation.css
@@ -46,7 +46,8 @@
 }
 
 #header-nav {
-  width: 100%;
+  width: 20%;
+  margin-left: 80%;
   height: 100vh;
   display: flex;
   flex-direction: row;
@@ -60,7 +61,8 @@
   font-size: 14px;
   line-height: 16px;
   color: #000000;
-  margin-right: 10%;
+  margin-right: 50%;
+  height: 70px;
   cursor: pointer;
 }
 
@@ -123,6 +125,17 @@
   width: 100%;
   height: 100vh;
   background-color: black;
+}
+
+#arrows {
+  width: 10%;
+  margin-left: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 8;
+  position: fixed;
 }
 
 .arrow {
