--- a/src/components/styles/Dropdown.css
+++ b/src/components/styles/Dropdown.css
@@ -1,18 +1,19 @@
 .Dropdown-root {
   position: relative;
-  width: 200px;
+  width: 384px;
   margin-bottom: 20px;
 }
 
 .Dropdown-control {
+  height: 60px;
   position: relative;
   overflow: hidden;
-  background-color: white;
+  background-color: #cfcfcf;
   border: 1px solid #ccc;
-  border-radius: 3px;
+  border-radius: 16px;
   box-sizing: border-box;
   color: #333;
-  cursor: default;
+  cursor: pointer;
   outline: none;
   padding: 8px 52px 8px 10px;
   transition: all 200ms ease;
@@ -23,37 +24,40 @@
 }
 
 .Dropdown-arrow {
-  border-color: #999 transparent transparent;
+  border-color: black transparent transparent;
   border-style: solid;
-  border-width: 5px 5px 0;
+  border-width: 15px 10px 0;
   content: " ";
   display: block;
   height: 0;
-  margin-top: -ceil(2.5);
+  margin-top: -ceil(3.5);
   position: absolute;
-  right: 10px;
-  top: 14px;
+  right: 20px;
+  top: 20px;
   width: 0;
 }
 
 .is-open .Dropdown-arrow {
-  border-color: transparent transparent #999;
-  border-width: 0 5px 5px;
+  border-color: transparent transparent black;
+  border-width: 0 10px 15px;
 }
 
 .Dropdown-menu {
-  background-color: white;
-  border: 1px solid #ccc;
+  background-color: #cfcfcf;
+  border: 0;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
-  margin-top: -1px;
-  max-height: 200px;
+  max-height: 405px;
   overflow-y: auto;
   position: absolute;
   top: 100%;
   width: 100%;
   z-index: 1000;
   -webkit-overflow-scrolling: touch;
+  padding-top: 20px;
+  margin-top: -20px;
 }
 
 .Dropdown-menu .Dropdown-group > .Dropdown-title {
@@ -65,15 +69,22 @@
 
 .Dropdown-option {
   box-sizing: border-box;
-  color: rgba(51, 51, 51, 0.8);
+  color: black;
   cursor: pointer;
   display: block;
-  padding: 8px 8px;
-  font-size: 12px;
+  padding: 8px 20px;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
 }
 
 .Dropdown-placeholder {
-  font-size: 12px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 .Dropdown-option:last-child {
