--- a/src/components/styles/About/About-Team.css
+++ b/src/components/styles/About/About-Team.css
@@ -2,11 +2,10 @@
   display: inline-flex;
   position: relative;
   flex-direction: column;
-
-  margin-top: 60px;
+  /* margin-top: 60px; */
   padding: 0;
   width: 100%;
-  height: 740px;
+  /* height: 740px; */
   background-color: white;
   justify-content: center;
   align-items: center;
@@ -18,6 +17,22 @@
   width: 100%;
   height: 140px;
   justify-content: center;
+}
+
+#team-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 90%;
+  padding-left: 10%;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  margin: 0;
+  padding-block-start: 137px;
+  padding-block-end: 65px;
+  background-color: white;
 }
 
 .team-team > img {
