--- a/src/components/styles/GlobalNavigation.css
+++ b/src/components/styles/GlobalNavigation.css
@@ -1,54 +1,7 @@
-#nav {
-  background-color: #efefef;
-}
-
-.ul {
-  display: flex;
-  /* width: 100%; 전체 너비 */
-  list-style: none;
-  color: black;
-  margin: 0;
-  padding-left: 10%;
-  padding-top: 30px;
-  margin-block-start: 0;
-}
-
-.link {
-  font-size: 15px;
-  color: black;
-  text-decoration: none;
-}
-#luminouss-img {
-  height: 40px;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.luminouss {
-  flex-grow: 1.5;
-  font-weight: bold;
-  /* margin-left: 30px; */
-}
-
-.about {
-  flex-grow: 0.5;
-  padding-top: 20px;
-}
-
-.profile {
-  flex-grow: 0.5;
-  padding-top: 20px;
-}
-
-.login {
-  flex-grow: 0.5;
-  padding-top: 20px;
-}
-
 #header-nav {
   width: 20%;
   margin-left: 80%;
-  height: 100vh;
+  height: fit-content;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -69,7 +22,7 @@
 #menu-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   background: #29753d;
   justify-content: flex-start;
   width: 0%;
