--- a/src/components/styles/About/About-main.css
+++ b/src/components/styles/About/About-main.css
@@ -230,6 +230,6 @@ pre {
   /* display: flex; */
   width: 1172px;
   height: 770px;
-  background-color: #232323;
+  /* background-color: #232323; */
   margin: 120px 0;
 }
