--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -33,11 +33,12 @@
 
 #test {
   opacity: 0;
-  display: flex;
+  display: none;
   background-color: black;
   width: 100%;
   height: 100vh;
   z-index: 2;
+  top: 0;
   position: absolute;
   align-items: center;
   justify-content: flex-start;
