--- a/src/components/styles/GlobalNavigation.css
+++ b/src/components/styles/GlobalNavigation.css
@@ -1,7 +1,7 @@
 #header-nav {
   width: 20%;
   margin-left: 80%;
-  height: fit-content;
+  height: 200px;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
