--- a/src/components/styles/MobileVersion.css
+++ b/src/components/styles/MobileVersion.css
@@ -32,6 +32,12 @@
     padding: 20px 0;
   }
 
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
   @keyframes appearing-opacity {
     from {
       opacity: 0;
@@ -62,6 +68,10 @@
     color: #000000;
     margin-right: 21px;
     height: 20px;
+  }
+
+  #our-logo {
+    margin-top: 20px;
   }
 
   #menu-container {
@@ -114,9 +124,9 @@
     -o-transition: opacity 1s ease-in-out;
   }
 
-  /* #third-page {
-    display: none;
-  } */
+  #third-page {
+    width: 100%;
+  }
 
   .arrow {
     z-index: 8;
@@ -210,6 +220,7 @@
   #introduction-container {
     height: 265px;
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -452,5 +463,881 @@
     border-radius: 16px;
     transition: 0.7s ease-in;
     background-color: rgba(196, 196, 196, 1);
+  }
+
+  /* AddroadStart */
+  #entire-div,
+  #aroad-container,
+  #broad-env,
+  #env-not-exist-container,
+  #env-exist-container,
+  #check-exist,
+  #lead-block-container,
+  #other-sup-container,
+  #stair-continer,
+  #rest,
+  #people-container,
+  #iaround-container,
+  #warning-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 88%;
+    justify-content: center;
+    align-items: center;
+    margin-left: 6%;
+  }
+
+  #sign-in-h2 {
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    /* width: 235px; */
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 27px;
+  }
+
+  #second-start-msg {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 32px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+
+  #to-next-page {
+    width: 330px;
+    height: 51.88px;
+    background: #29753d;
+    border-radius: 16px;
+    border-width: 0;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 20px;
+    text-align: center;
+  }
+
+  #third-start-msg {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+  }
+
+  /* Aroad */
+  #subtitle {
+    display: flex;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 32px;
+    align-items: center;
+    text-align: center;
+  }
+
+  #search-container {
+    display: flex;
+    /* width: 90%; */
+    /* margin-right: 40vh; */
+    justify-content: center;
+    height: 51px;
+    position: relative;
+  }
+
+  #search-input {
+    background-color: #c4c4c4;
+    width: 300px;
+    height: 42px;
+    border-radius: 16px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    text-indent: 18px;
+    border-width: 0;
+    cursor: pointer;
+    /* position: absolute; */
+    color: white;
+  }
+
+  #search-input::placeholder {
+    color: #000000;
+  }
+
+  #search-button {
+    z-index: 1;
+    width: 80px;
+    height: 44px;
+    /* position: absolute; */
+    margin-left: -44px;
+    border-width: 0;
+    border-radius: 16px;
+    padding: 0;
+    background-color: snow;
+    cursor: pointer;
+  }
+
+  #road-res-entire {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: none;
+  }
+
+  #search-results,
+  #aroundenv {
+    display: none;
+    flex-direction: column;
+    width: 330px;
+    justify-content: flex-start;
+    align-items: center;
+    /* margin-top: 1.1%; */
+    margin-top: -20px;
+    padding-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 4px;
+    border-width: 0;
+    border-radius: 16px;
+    background: #c4c4c4;
+  }
+
+  #item-btn {
+    width: 330px;
+    text-align: start;
+    text-indent: 15px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-width: 0;
+    margin-top: -3px;
+    transition: 0.5s ease;
+  }
+  #place-h4 {
+    margin-block-end: 0;
+    margin-block-start: 15px;
+  }
+
+  #place-h6 {
+    margin-block-end: 1.5em;
+    margin-block-start: 1.5em;
+  }
+  #add-area {
+    display: flex;
+    flex-direction: row;
+  }
+  #item-area {
+    margin: 0;
+    margin-top: 5px;
+    margin-right: 10px;
+  }
+  #delete-item-btn {
+    display: inline-block;
+    margin-top: 5px;
+  }
+
+  /* Dropdown */
+  .Dropdown-root {
+    position: relative;
+    width: 300px;
+    margin-bottom: 20px;
+  }
+
+  .Dropdown-control {
+    height: 51px;
+    position: relative;
+    overflow: hidden;
+    background-color: #cfcfcf;
+    border: 1px solid #ccc;
+    border-radius: 16px;
+    box-sizing: border-box;
+    color: #333;
+    cursor: pointer;
+    outline: none;
+    z-index: 1;
+    padding: 8px 52px 8px 10px;
+    transition: all 200ms ease;
+  }
+
+  .Dropdown-control:hover {
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+  }
+
+  .Dropdown-arrow {
+    border-color: black transparent transparent;
+    border-style: solid;
+    border-width: 10px 7px 0;
+    content: " ";
+    display: block;
+    height: 0;
+    margin-top: -ceil(3.5);
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 0;
+  }
+
+  .is-open .Dropdown-arrow {
+    border-color: transparent transparent black;
+    border-width: 0 7px 10px;
+  }
+
+  .Dropdown-menu {
+    background-color: #cfcfcf;
+    border: 0;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+    box-sizing: border-box;
+    max-height: 405px;
+    overflow-y: auto;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    /* z-index: -1; */
+    -webkit-overflow-scrolling: touch;
+    padding-top: 20px;
+    margin-top: -20px;
+  }
+
+  .Dropdown-menu .Dropdown-group > .Dropdown-title {
+    padding: 8px 8px;
+    color: rgba(51, 51, 51, 1);
+    font-weight: bold;
+    text-transform: capitalize;
+  }
+
+  .Dropdown-option {
+    box-sizing: border-box;
+    color: black;
+    cursor: pointer;
+    display: block;
+    padding: 8px 20px;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: normal;
+  }
+
+  .Dropdown-placeholder {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    margin-top: 6px;
+    margin-left: 10px;
+  }
+
+  .Dropdown-option:last-child {
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;
+  }
+
+  .Dropdown-option:hover {
+    background-color: #f2f9fc;
+    color: #333;
+  }
+
+  .Dropdown-option.is-selected {
+    background-color: #f2f9fc;
+    color: #333;
+  }
+
+  .Dropdown-noresults {
+    box-sizing: border-box;
+    color: #ccc;
+    cursor: default;
+    display: block;
+    padding: 8px 8px;
+  }
+
+  /* Broad */
+  #subsubtitle {
+    width: 300px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: start;
+    height: 20px;
+  }
+
+  #number-input {
+    width: 300px;
+    height: 51px;
+    background: #c4c4c4;
+    border-radius: 16px;
+    border-width: 0;
+    color: white;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    text-indent: 18px;
+  }
+
+  #number-input::placeholder {
+    color: #000000;
+  }
+
+  /* Cfence */
+  #env-not-exist-container > h1 {
+    font-size: 1.5em;
+  }
+
+  .fence-page {
+    /* flex-direction: row;
+    justify-content: flex-end; */
+    display: flex;
+    /* height: 100%; */
+    width: 105%;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .fence-title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 32px;
+    text-align: center;
+  }
+  .fence-notice {
+    margin-block-start: 0;
+    text-align: center;
+    font-size: 11px;
+  }
+
+  .yes-no {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .yes-no-yes {
+    margin-right: 1%;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 11px;
+  }
+  .yes-no-no {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 11px;
+  }
+
+  .questions-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 2%;
+  }
+  .yes-input {
+    margin-left: 0;
+    margin-right: 3.5%;
+  }
+  .question {
+    width: 80%;
+    margin-right: 5%;
+    text-align: start;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+  }
+
+  /* CheckExist */
+  #ox-btns {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #o-btn,
+  #x-btn {
+    width: 166px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    border-width: 2px;
+    border-color: black;
+    background-color: white;
+    transition: 0.3s ease-in;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 20px;
+    text-align: center;
+  }
+  #o-btn:hover,
+  #x-btn:hover {
+    cursor: pointer;
+    background-color: #29753d;
+    color: white;
+  }
+
+  #o-btn {
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+    margin-right: -1px;
+  }
+
+  #x-btn {
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+    margin-left: -1px;
+  }
+
+  #stair-input {
+    background: #c4c4c4;
+    border-radius: 16px;
+    width: 274px;
+    height: 200px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 1px;
+    padding: 18px 18px;
+    color: white;
+    margin-bottom: 20px;
+  }
+
+  #stair-input::placeholder {
+    color: #000000;
+  }
+
+  #toilet-input,
+  #bench-input {
+    display: none;
+    margin-bottom: 10px;
+  }
+
+  #toilet-input > label > input,
+  #bench-input > label > input {
+    width: 166px;
+    height: 50px;
+    background: #c4c4c4;
+    border-radius: 16px;
+    border-width: 0ch;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    text-indent: 5px;
+  }
+
+  /* Hpeople */
+  .population {
+    z-index: 2;
+  }
+
+  /* Iaround */
+
+  #iaround-container > h4 {
+    text-align: center;
+    word-break: keep-all;
+  }
+  #search-around-env {
+    display: flex;
+    width: 330px;
+    height: 60px;
+    position: relative;
+  }
+
+  #env-item-container {
+    width: 300px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+
+  #env-item-info {
+    display: inline-flex;
+    margin-right: 10px;
+    /* width: 20%; */
+  }
+
+  #envitem-data {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  #envitem-data > h3 {
+    font-size: 14px;
+  }
+
+  #envitem-data-h5 {
+    margin-block-start: 1em;
+    font-size: 12px;
+    margin-block-end: 0.5em;
+  }
+
+  #item-btn > h5 {
+    font-size: 11px;
+  }
+
+  #etc-input {
+    width: 200px;
+    height: 30px;
+    background: #c4c4c4;
+    border-radius: 16px;
+    border-width: 0ch;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    text-indent: 5px;
+    color: white;
+    margin-bottom: 30px;
+  }
+  #etc-input::placeholder {
+    color: black;
+  }
+
+  #etc-btn {
+    z-index: 1;
+    margin-left: -32px;
+    width: 50px;
+    height: 30px;
+    border-width: 0ch;
+    border-radius: 16px;
+    margin-bottom: 30px;
+  }
+
+  #feature-input {
+    background: #c4c4c4;
+    border-radius: 16px;
+    width: 274px;
+    height: 100px;
+    border-width: 0ch;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    text-indent: 5px;
+    color: white;
+    margin-bottom: 20px;
+    padding: 18px 18px;
+  }
+
+  /* AboutMain */
+  #container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    align-items: center;
+    background-color: white;
+  }
+
+  #about-page {
+    padding-block-start: 74px;
+    margin: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 94%;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 27px;
+    padding-left: 6%;
+    background-color: #c3c3c3;
+  }
+  .introduction {
+    display: inline-flex;
+    background-color: #c3c3c3;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    height: 453px;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .team-name {
+    width: 284px;
+    height: 54px;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 54px;
+    margin: 0;
+    text-align: center;
+    margin-top: 97px;
+    color: #232323;
+  }
+
+  .team-vision-mean {
+    text-align: center;
+    width: 332px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    white-space: unset;
+    line-height: 32px;
+  }
+
+  .logo-image {
+    display: inline-flex;
+    flex-direction: row;
+    width: 100%;
+    height: 232px;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 480px; */
+    background-color: white;
+  }
+
+  .logo-image > img {
+    width: 128px;
+    height: 75px;
+  }
+
+  .problem-tit {
+    display: inline-flex;
+    flex-direction: row;
+    width: 100%;
+    height: 320px;
+    /* margin-top: 580px; */
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .problem-tit .prob-tit {
+    width: 284px;
+    height: 43px;
+    position: absolute;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .problem-tit .prob-pic {
+    /* width: auto; */
+    height: 100%;
+    width: auto;
+  }
+  img {
+    padding: 0;
+  }
+
+  .problem-body {
+    display: inline-flex;
+    flex-direction: row;
+    width: 100%;
+    height: 490px;
+    /* margin-top: 580px; */
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+  }
+
+  .team-problem {
+    width: 332px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 32px;
+    white-space: unset;
+  }
+
+  .solution-tit {
+    display: inline-flex;
+    flex-direction: row;
+    width: 100%;
+    height: 320px;
+    /* margin-top: 580px; */
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .solution-tit .sol-tit {
+    width: 284px;
+    height: 43px;
+    position: absolute;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .solution-tit .sol-pic {
+    /* width: auto; */
+    height: 100%;
+    width: auto;
+  }
+
+  .problem-body {
+    display: inline-flex;
+    flex-direction: row;
+    width: 100%;
+    height: 490px;
+    /* margin-top: 580px; */
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+  }
+
+  .explaining-wrap > pre {
+    width: 332px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 32px;
+    white-space: unset;
+    word-break: keep-all;
+  }
+
+  #ux-ui {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  #ux-tit {
+    width: 219px;
+    height: 51px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 27px;
+    text-align: center;
+  }
+
+  #radius-box {
+    background: #29753d;
+    border: 0.5px solid #ffffff;
+    box-sizing: border-box;
+    border-radius: 16px;
+    width: 200px;
+    height: 8px;
+  }
+
+  #app-ui {
+    width: 100%;
+    height: auto;
+    margin: 54px 0;
+  }
+
+  /* Team */
+  #team-container {
+    display: inline-flex;
+    position: relative;
+    flex-direction: column;
+    /* margin-top: 60px; */
+    padding: 0;
+    width: 100%;
+    /* height: 740px; */
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+  }
+  .team-team {
+    display: inline-flex;
+    position: relative;
+    width: 100%;
+    height: 140px;
+    justify-content: center;
+  }
+  #team-page {
+    padding-block-start: 74px;
+    margin: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 94%;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 27px;
+    margin-left: 6%;
+  }
+
+  .team-faces-wrap {
+    height: 280px;
+    width: 100%;
+    overflow-x: scroll;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .team-face {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+  }
+
+  .team-face > img {
+    /* display: inline-flex; */
+    height: 280px;
+    width: 280px;
+    border-width: 0;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .team-face:hover > img {
+    opacity: 0.7;
+  }
+
+  .team-face:hover .team-name-role {
+    display: flex;
+  }
+  .team-face:hover .team-name-role > h4 {
+    display: block;
+  }
+  .team-face:hover .team-name-role > h5 {
+    display: block;
+  }
+
+  .team-name-role {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    border-radius: 50%;
+    border-width: 0;
+    flex-direction: column-reverse;
+    width: 280px;
+    height: 280px;
+    margin-left: -280px;
+    background-color: rgba(0, 0, 0, 0.6);
+    /* background-position-x: absolute; */
+  }
+
+  .team-name-role > h4 {
+    display: none;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 27px;
+    text-align: center;
+    margin-block-start: 0;
+    margin-block-end: 1em;
+    color: #ffc107;
+  }
+
+  .team-name-role > h5 {
+    display: none;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    color: #ffc107;
   }
 }
