--- a/src/components/styles/WebVersion.css
+++ b/src/components/styles/WebVersion.css
@@ -481,6 +481,21 @@
     position: relative;
   }
 
+  #writer-input {
+    background: #c4c4c4;
+    width: 384px;
+    height: 60px;
+    border-radius: 16px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    text-indent: 18px;
+    margin-top: 1.5em;
+    border-width: 0;
+    cursor: pointer;
+    color: white;
+  }
+
   #search-input {
     background: #c4c4c4;
     width: 384px;
@@ -493,10 +508,10 @@
     border-width: 0;
     cursor: pointer;
     position: absolute;
-
     color: white;
   }
-  #search-input::placeholder {
+  #search-input::placeholder,
+  #writer-input::placeholder {
     color: #000000;
   }
 
@@ -1857,6 +1872,15 @@
   /* JwarnFeat */
 
   #warning-container {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #writer-name-container {
     display: flex;
     height: 100%;
     flex-direction: column;
