--- a/src/components/styles/MobileVersion.css
+++ b/src/components/styles/MobileVersion.css
@@ -704,7 +704,8 @@
   }
 
   #search-input,
-  #writer-input {
+  #writer-input,
+  #phone-input {
     background-color: #c4c4c4;
     width: 300px;
     height: 42px;
@@ -721,7 +722,8 @@
   }
 
   #search-input::placeholder,
-  #writer-input::placeholder {
+  #writer-input::placeholder,
+  #phone-input::placeholder {
     color: #000000;
   }
 
